--- a/package.json
+++ b/package.json
@@ -3,12 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
+    "date-fns": "^2.29.3",
+    "easy-peasy": "^5.2.0",
     "json-server": "^0.17.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
@@ -23,7 +22,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "fake-server": "npx json-server -p 5000 -w api/articles.json "
+    "fake-server": "npx json-server -p YOU_PORT -w api/articles.json "
   },
   "eslintConfig": {
     "extends": [
